--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
             android:padding="16dp">
 
             <Button
+                android:id="@+id/articles_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
@@ -39,6 +40,7 @@
                 android:layout_marginBottom="8dp"/>
 
             <Button
+                android:id="@+id/novels_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
@@ -47,7 +49,9 @@
                 android:text="Novel-Stories Generation"
                 android:textColor="@android:color/white"
                 android:layout_marginBottom="8dp"/>
+
             <Button
+                android:id="@+id/poems_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
